--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
                 <article class="tile">
                     <figure class="tile__figure">
                         <img
-                            src="1.png"
-                            data-hover="1.png"
+                            src="1.jpg"
+                            data-hover="1.jpg"
                             class="tile__image"
                             alt="My image"
                             width="300"
